# teleoperation_robot_arms

./: .gitignore  README.md
src/teleop_controllers/: package.xml  setup.cfg  setup.py
src/teleop_controllers/teleop_controllers/: __init__.py  kinematics.py  master_control_bridge.py  pid_controller.py  teleoperation_node.py  ur5_analytical_ik.py
src/teleop_description/: CMakeLists.txt  package.xml
src/teleop_description/config/: combined_controllers.yaml  master_controllers.yaml  slave_controllers.yaml  teleoperation.rviz
src/teleop_description/urdf/: arm_6dof.ros2_control.xacro  arm_6dof.urdf.xacro  combined.ros2_control.xacro  complete_system.urdf.xacro
src/teleop_gazebo/: CMakeLists.txt  package.xml
src/teleop_gazebo/launch/: teleop_gazebo.launch.py  teleop_rviz_demo.launch.py
src/teleop_gazebo/worlds/: teleop_world.world
